Fix: Dismissable notice close button overlap the page builder dropdown.

--- a/inc/assets/css/admin.css
+++ b/inc/assets/css/admin.css
@@ -225,7 +225,9 @@
     margin-left: 0;
     width: auto;
     float: none;
+    margin-right: 220px;
 }
+
 .filters-wrap {
     display: inline-block;
 }
